# python-project-template

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build_lint_test.yml
src/project_name/: __main__.py  cli.py  example.py
tests/: test_example.py
