[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8-comprehensions = "^3.14.0"
flake8-use-fstring = "^1.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.6"
nox = "^2023.4.22"

[tool.mypy]
ignore_missing_imports = false
strict = true

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]
select = [
    "ALL",  # includes all rules (including new ones)
]
extend-ignore = [
    "D203",     # one-blank-line-before-class
    "D213",     # multi-line-summary-second-line
    "D100",     # missing docstring in public module
    "D101",     # missing docstring in public class
    "D102",     # missing docstring in public method
    "D103",     # missing docstring in public function
    "D104",     # missing docstring in public package
    "B024",     # use of abstract base class without abstract methods
    "FIX001",   # unresolved FIXME
    "FIX002",   # TODO found
    "TD001",    # invalid TODO tag: `FIXME`
    "TD002",    # missing author in TODO
    "TD003",    # missing issue link on line following TODO
    "TD004",    # missing colon in TODO
    "TRY003",   # avoid specifying long messages outside the exception class
    "S101",     # use of assertions
    "T201",     # use of print
    "D204",     # 1 blank line required after class docstring
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
