[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
name_of_your_binary = 'project_name.cli:cli'

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.10.0"
pytest = ">=8.2.2"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.10"

[tool.mypy]
ignore_missing_imports = false
strict = true

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "ALL",  # includes all rules (including new ones)
]
extend-ignore = [
    "ANN101",   # missing type annotation for 'self' in method
    "ANN102",   # missing type annotation for 'cls' in classmethod
    "ARG001",   # unused function argument
    "B024",     # use of abstract base class without abstract methods
    "C901",     # function is too complex (cyclomatic complexity)
    "D100",     # missing docstring in public module
    "D101",     # missing docstring in public class
    "D102",     # missing docstring in public method
    "D103",     # missing docstring in public function
    "D104",     # missing docstring in public package
    "D105",     # missing docstring in magic method
    "D203",     # one-blank-line-before-class
    "D204",     # 1 blank line required after class docstring
    "D213",     # multi-line-summary-second-line
    "D401",     # first line of docstring should be in imperative mood
    "D413",     # missing blank line after last section
    "FBT001",   # boolean typed positional argument in function definition
    "FIX001",   # unresolved FIXME
    "FIX002",   # TODO found
    "PGH003",   # use specific rule codes when ignoring type issues
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments in function definition
    "S101",     # use of assertions
    "SLF001",   # private member accessed
    "T201",     # use of print
    "TD001",    # invalid TODO tag: `FIXME`
    "TD002",    # missing author in TODO
    "TD003",    # missing issue link on line following TODO
    "TD004",    # missing colon in TODO
    "TRY003",   # avoid specifying long messages outside the exception class
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
